Fix: remove extra padding

--- a/bootcommerce/compass/sass/bootcommerce/common/_forms.sass
+++ b/bootcommerce/compass/sass/bootcommerce/common/_forms.sass
@@ -20,7 +20,6 @@ form
   .views-field-commerce-total
     text-align: right
   .form-actions
-    padding: $table-cell-padding
     .form-submit
       margin-left: 5px
 
